--- a/Beesiness/Views/Auth/LoginIn.cshtml
+++ b/Beesiness/Views/Auth/LoginIn.cshtml
@@ -114,6 +114,7 @@
         </label>
       </div>
         <button id="btnLoginIn" class="btn btn-primary w-100 py-2" type="submit">Iniciar Sesión</button>
+            <a href="/Auth/RequestRegistration">¿No tienes una cuenta? Solicita tu registro aquí</a>
     </form>
   </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
