--- a/Beesiness/Views/Home/Index.cshtml
+++ b/Beesiness/Views/Home/Index.cshtml
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+    <!--estamos testeando los controlers-->
+    <div class="card">
+        <a asp-controller="Colmena" asp-action="ColmenaIndex">Colmenas</a>
+    </div>
     <!--  Body Wrapper -->
     <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
          data-sidebar-position="fixed" data-header-position="fixed">
