--- a/Beesiness/Views/Auth/LoginIn.cshtml
+++ b/Beesiness/Views/Auth/LoginIn.cshtml
@@ -18,7 +18,7 @@
 
     <div class="container" id="container">
         <div class="form-container sign-up">
-            <form asp-action="LoginIn" method="Post">
+            <form asp-action="RequestRegistration" method="Post">
                 <h1>Solicitar cuenta</h1>
                 <span>Ingresa los siguientes datos</span>
                 <input asp-for="Registration.NombreCompleto" type="text" placeholder="Nombre y apellido">
