implementada la vista ColmenaResumen con graficos de barra , un nuevo método de ColmenaController para enviar datos como Json y agregada una nueva libreria en Layout:  Chart.js para crear graficos en javascript

--- a/Beesiness/Views/Colmena/ColmenaIndex.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaIndex.cshtml
@@ -10,6 +10,9 @@
     <a class="button" asp-action="ColmenaCrear">Nueva Colmena</a>
 </div>
 <div>
+    <a class="button" asp-action="ColmenaResumen">Informacion Colmenas</a>
+</div>
+<div>
     <h6>Listado de Colmenas</h6>
 </div>
 <div class="row justify-content-evenly mt-3" >
