--- a/Beesiness/Views/Usuarios/CreateUser.cshtml
+++ b/Beesiness/Views/Usuarios/CreateUser.cshtml
@@ -9,8 +9,8 @@
         Creación de usuario
     </div>
     <div class="card-body">
-        <a asp-action="GestionUsuario" 
-         class="btn btn-outline-primary"><i class="fa-solid fa-users me-2"></i>Volver a la administración</a>
+        <a href="@Url.Action("RequestRegistrationIndex", "Auth")"
+           class="btn btn-outline-primary"><i class="fa-solid fa-users me-2"></i>Volver al listado de usuarios temporales</a>
     </div>
 </div>
 
