--- a/Beesiness/Views/Auth/ContraseñaOlvidada.cshtml
+++ b/Beesiness/Views/Auth/ContraseñaOlvidada.cshtml
@@ -1,4 +1,15 @@
 ﻿@{
     Layout = null;
 }
-<p>Contraseña olvidada, contacta con administrador</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="/css/contraseñaolvidada.css">
+</head>
+<body>
+    <div class="con-body">
+        <div class="image-con image-fade-in-expand"></div>
+        <h3 class="tracking-in-expand">Contraseña olvidada, contacta con administrador</h3>
+    </div>
+</body>
+</html>
