--- a/Beesiness/Views/Shared/_Layout.cshtml
+++ b/Beesiness/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a class="navbar-brand me-auto" href="#"><img src="/css/logo proyecto.svg" width="60" height="40" /></a>
+            <a class="navbar-brand me-auto" asp-controller="Home" asp-action="Index"><img src="/css/logo proyecto.svg" width="60" height="40" /></a>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                  aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
@@ -31,11 +31,11 @@
                         @if (User.IsInRole("Root"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" asp-controller="Auth" asp-action="RequestRegistrationIndex">Usuarios</a>
+                                <a class="nav-link mx-lg-2" asp-controller="Usuarios" asp-action="IndexUser">Usuarios</a>
                             </li>
                         }
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" asp-controller="Colmena" asp-action="ColmenaIndex">Colmenas</a>
+                            <a class="nav-link mx-lg-2" asp-controller="Colmena" asp-action="ColmenaGeneral">Colmenas</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="#">Cosecha de miel</a>
