Tterminado: -InfoColmenaController -Vistas InfoColmena -Generar PDF para InfoColmena

--- a/Beesiness/Views/Colmena/ColmenaIndex.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaIndex.cshtml
@@ -7,10 +7,16 @@
 <h1>Administrar Colmenas</h1>
 
 <div>
+    <a class="button" asp-controller="Home" asp-action="Index">Volver al Home</a>
+</div>
+<div>
     <a class="button" asp-action="ColmenaCrear">Nueva Colmena</a>
 </div>
 <div>
-    <a class="button" asp-action="ColmenaResumen">Informacion Colmenas</a>
+    <a class="button" asp-action="ColmenaResumen">Graficos Colmenas</a>
+</div>
+<div>
+    <a class="button" asp-action="DescargarPdf">Descargar Pdf</a>
 </div>
 <div>
     <h6>Listado de Colmenas</h6>
@@ -46,6 +52,7 @@
                         <td>
                             <a asp-action="ColmenaEditar" asp-route-colmenaId="@item.Id">Editar</a>
                             <a onclick="return confirm('¿Eliminar Colmena?')" asp-action="ColmenaBorrar" asp-route-colmenaId="@item.Id">Borrar</a>
+                            <a asp-controller="InformacionColmena" asp-action="InformacionColmenaIndex" asp-route-colmenaId="@item.Id">Detalle</a>
                         </td>
 
                     </tr>
