--- a/Beesiness/Views/Home/Index.cshtml
+++ b/Beesiness/Views/Home/Index.cshtml
@@ -18,6 +18,12 @@
     <div class="card">
         <a asp-controller="Colmena" asp-action="ColmenaIndex">Colmenas</a>
     </div>
+    <div class="card">
+        <a asp-controller="Inspeccion" asp-action="InspeccionIndex">Inspecciones a Colmenas</a>
+    </div>
+    <div class="card">
+        <a asp-controller="Enfermedad" asp-action="EnfermedadIndex">Enfermedades</a>
+    </div>
 </body>
 
 </html>
