--- a/Beesiness/Views/Colmena/ColmenaCrear.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaCrear.cshtml
@@ -6,7 +6,7 @@
     <h2>Crear Colmena</h2>
 </div>
 <div>
-    <form class="row justify-content-evenly" asp-action="ColmenaCrear">
+    <form class="row justify-content-evenly" asp-action="ColmenaCrear" method="post">
         <div class="col-md-6">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group mt-3">
