--- a/Beesiness/Views/Usuarios/IndexUser.cshtml
+++ b/Beesiness/Views/Usuarios/IndexUser.cshtml
@@ -13,7 +13,15 @@
         <div class="card-body">
             <h5 class="card-title">Ver usuarios registrados</h5>
             <p class="card-text">Apartado para ver los usuarios que se encuentran registrados dentro de Beesiness</p>
-            <a asp-controller="C" class="btn btn-primary">Ver usuarios</a>
+            <a asp-controller="Usuarios" asp-action="GestionUsuario" class="btn btn-primary">Ver usuarios</a>
+        </div>
+    </div>
+    <div class="card mx-auto image-fade-in-expand" style="width: 15rem;">
+        <img src="/css/infocolmena.svg" class="card-img-top img-fluid mx-auto d-block" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Editar usuarios registrados</h5>
+            <p class="card-text">Apartado para editar usuarios que se encuentren registrados en el sistema</p>
+            <a asp-controller="Usuarios" asp-action="EditUser" class="btn btn-primary">Editar usuarios</a>
         </div>
     </div>
     <div class="card mx-auto image-fade-in-expand" style="width: 15rem;">
@@ -22,14 +30,6 @@
             <h5 class="card-title">Ver usuarios que están pendientes de registro</h5>
             <p class="card-text">Apartado para revisar y poder registrar a los usuarios que están pendiente de registro</p>
             <a asp-controller="Auth" asp-action="RequestRegistrationIndex" class="btn btn-primary">Ver usuarios pendientes de registro</a>
-        </div>
-    </div>
-    <div class="card mx-auto image-fade-in-expand" style="width: 15rem;">
-        <img src="/css/infocolmena.svg" class="card-img-top img-fluid mx-auto d-block" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Info colmenas</h5>
-            <p class="card-text">¿Necesitas revisar detalles de tus colmenas?, ¡has llegado al apartado correcto!</p>
-            <a asp-action="ColmenaResumen" class="btn btn-primary">Informacion colmenas</a>
         </div>
     </div>
 </div>
