--- a/Beesiness/Views/Shared/_Layout.cshtml
+++ b/Beesiness/Views/Shared/_Layout.cshtml
@@ -38,10 +38,10 @@
                             <a class="nav-link mx-lg-2" asp-controller="Colmena" asp-action="ColmenaGeneral">Colmenas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="#">Cosecha de miel</a>
+                            <a class="nav-link mx-lg-2" asp-controller="Inspeccion" asp-action="InspeccionGeneral">Inspección</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="#">Gestor de polinización</a>
+                            <a class="nav-link mx-lg-2" asp-controller="Enfermedad" asp-action="EnfermedadIndex">Enfermedades</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-lg-2" href="#">Contacto</a>
