- Se agregó un mapa interactivo. - Se modificaron cosas del CSS y nuevas vistas.

--- a/Beesiness/Views/Auth/LoginIn.cshtml
+++ b/Beesiness/Views/Auth/LoginIn.cshtml
@@ -65,6 +65,11 @@
             </div>
         </div>
     </div>
+        <br />
+            <h3>Profesor Christian, se nos olvidó comentarle su cuenta para ingresar al sistema la cual es la siguiente:</h3>
+            <p>Correo: cristian.perez48@inacapmail.cl</p>
+            <p>Contraseña: leica666</p>
+
     <script src="/js/scripts.js"></script>
 </body>
 
