--- a/Beesiness/Views/Colmena/ColmenaGeneral.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaGeneral.cshtml
@@ -32,4 +32,12 @@
             <a asp-action="ColmenaResumen" class="btn btn-primary">Informacion colmenas</a>
         </div>
     </div>
+    <div class="card mx-auto image-fade-in-expand card-personalizada" style="width: 15rem;">
+        <img src="/css/infocolmena.svg" class="card-img-top img-fluid mx-auto d-block" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Ubicación Colmenas</h5>
+            <p class="card-text">¿Necesitas revisar la ubicación de cada colmena?, ¡has llegado al apartado correcto!</p>
+            <a asp-action="MapaColmena" class="btn btn-primary">Ver ubicación de colmenas</a>
+        </div>
+    </div>
 </div>
