--- a/Beesiness/Views/Usuarios/IndexUser.cshtml
+++ b/Beesiness/Views/Usuarios/IndexUser.cshtml
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="card mx-auto image-fade-in-expand card-personalizada" style="width: 15rem;">
-        <img src="/css/apicultorver.svg" class="card-img-top img-fluid mx-auto d-block" alt="...">
+        <img src="/css/apicultorpendiente.svg" class="card-img-top img-fluid mx-auto d-block" alt="...">
         <div class="card-body">
             <h5 class="card-title">Ver usuarios que están pendientes de registro</h5>
             <p class="card-text">Apartado para revisar y poder registrar a los usuarios que están pendiente de registro</p>
