--- a/Beesiness/wwwroot/css/layout.css
+++ b/Beesiness/wwwroot/css/layout.css
@@ -102,3 +102,29 @@
     .hero-section h2 {
         font-size: 1.2em;
     }
+
+/* Estilos de las cards hacia el lado*/
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+    gap: 10px; 
+}
+.card {
+    padding: 20px;
+    margin: 10px;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+}
+.card-link {
+    text-decoration: none;
+    color: inherit;
+    flex: 1;
+    min-width: 250px;
+    max-width: calc(33.333% - 20px);
+    font-family: 'Roboto', sans-serif;
+}
+.card:hover {
+    transform: translateY(-5px);
+    cursor: pointer;
+}
