--- a/Beesiness/Views/Colmena/MapaColmena.cshtml
+++ b/Beesiness/Views/Colmena/MapaColmena.cshtml
@@ -2,6 +2,11 @@
     ViewData["Title"] = "Mapa de Colmenas";
 }
 <link href="/css/mapa.css" rel="stylesheet" />
+<select id="filtroTipoColmena">
+    <option value="Todas">Todas</option>
+    <option value="Dadant">Dadant</option>
+    <option value="Langstroth">Langstroth</option>
+</select>
 <div id="myMap" style="position:relative;width:100%;height:600px;"></div>
 
 <!-- Contenedor para Infobox personalizado -->
