--- a/Beesiness/Views/Colmena/MapaColmena.cshtml
+++ b/Beesiness/Views/Colmena/MapaColmena.cshtml
@@ -7,6 +7,9 @@
     <option value="Dadant">Dadant</option>
     <option value="Langstroth">Langstroth</option>
 </select>
+<input type="hidden" id="Latitude" name="Latitude" />
+<input type="hidden" id="Longitude" name="Longitude" />
+<input type="hidden" id="ZoomLevel" name="ZoomLevel" />
 <div id="myMap" style="position:relative;width:100%;height:600px;"></div>
 
 <!-- Contenedor para Infobox personalizado -->
