--- a/Beesiness/Views/Colmena/MapaColmena.cshtml
+++ b/Beesiness/Views/Colmena/MapaColmena.cshtml
@@ -7,16 +7,16 @@
     <option value="Dadant">Dadant</option>
     <option value="Langstroth">Langstroth</option>
 </select>
-<div id="contextMenu" class="context-menu" style="display:none">
-    <ul>
-        <li id="contextMenuOption">Guardar Ubicación</li>
-    </ul>
-</div>
 <div id="myMap" style="position:relative;width:100%;height:600px;"></div>
 
 <!-- Contenedor para Infobox personalizado -->
 <div id="customInfobox" class="custom-infobox">
     <!-- El contenido del Infobox se llenará dinámicamente -->
+</div>
+<div id="contextMenu" class="context-menu" style="display:none">
+    <ul>
+        <li id="contextMenuOptions">Guardar Ubicación</li>
+    </ul>
 </div>
 
 @section Scripts {
