se cambió el menú del mapa para un infobox

--- a/Beesiness/wwwroot/css/mapa.css
+++ b/Beesiness/wwwroot/css/mapa.css
@@ -22,3 +22,9 @@
     // O cualquier color que combine con tu diseño border: none;
     cursor: pointer;
 }
+
+#contextMenu {
+    background-color: black;
+    border: 1px solid black;
+    z-index: 1000;
+}
