--- a/Beesiness/Views/Ubicacion/UbicacionCrear.cshtml
+++ b/Beesiness/Views/Ubicacion/UbicacionCrear.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Beesiness.Models.UbicacionMapa
 
-<form asp-action="AgregarUbicacion" asp-controller="Mapa" method="post">
+<form asp-action="UbicacionCrear" asp-controller="Mapa" method="post">
 	<input asp-for="Nombre" placeholder="Nombre de Ubicación" />
 	<input asp-for="Descripcion" placeholder="Descripción de Ubicación" />
 	<input asp-for="Latitude" type="hidden" />
