--- a/Beesiness/Views/Colmena/ColmenaCrear.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaCrear.cshtml
@@ -13,7 +13,12 @@
                 <span asp-validation-for="FechaIngreso" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
-                <input asp-for="TipoColmena" class="form-control" placeholder="Tipo de Colmena" />
+                <select asp-for="TipoColmena" class="form-control" id="tipoColmenaSelect">
+                    <option value="" id="defaultOption">Seleccione un tipo de colmena</option>
+                    <option value="Dadant">Dadant</option>
+                    <option value="Langstroth">Langstroth</option>
+                    <option value="Baby">Baby</option>
+                </select>
                 <span asp-validation-for="TipoColmena" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
@@ -41,4 +46,15 @@
 @section Scripts {
     <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=AmrnF-1-dvaNYDUkUuogYW8SOvy2cut1Xdxs4EzsahlVv8HrT_MvGx0HPKP8dOlZ&callback=loadMapScenario' async defer></script>
     <script src="/js/ubicacion.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var tipoColmenaSelect = document.getElementById('tipoColmenaSelect');
+            tipoColmenaSelect.addEventListener('focus', function () {
+                var defaultOption = document.getElementById('defaultOption');
+                if (defaultOption) {
+                    tipoColmenaSelect.removeChild(defaultOption);
+                }
+            });
+        });
+    </script>
 }
