- Mapa Colmena modificado

--- a/Beesiness/Views/Colmena/ColmenaIndex.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaIndex.cshtml
@@ -22,7 +22,7 @@
         <table class="table" >
             <thead>
                 <tr>
-                    <th>Id</th>
+                    <th>Número de identificación</th>
                     <th>Fecha ingreso</th>
                     <th>Tipo Colmena</th>
                     <th>Descripcion</th>
@@ -35,7 +35,7 @@
                 {
                     <tr>
                         <td>
-                            @item.Id
+                            @item.numIdentificador
                         </td>
                         <td>
                             @item.FechaIngreso
