--- a/Beesiness/Views/Colmena/MapaColmena.cshtml
+++ b/Beesiness/Views/Colmena/MapaColmena.cshtml
@@ -3,7 +3,7 @@
 }
 <link href="/css/mapa.css" rel="stylesheet" />
 <div class="panel-filtros">
-    <button class="boton-filtros">Filtros</button>
+    <button id="botonFiltros" class="boton-filtros">Filtros</button>
     <div class="contenido-filtros" id="contenidoFiltros">
         <div class="tarjetas-filtros">
             <div class="filtro-grupo">
