--- a/Beesiness/Views/Colmena/ColmenaCrear.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaCrear.cshtml
@@ -1,4 +1,4 @@
-﻿@model Colmena
+﻿@model ColmenaViewModel
 @{
 }
 <div>
@@ -8,6 +8,10 @@
     <form class="row justify-content-evenly" asp-action="ColmenaCrear" method="post">
         <div class="col-md-6">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group mt-3">
+                <input asp-for="numIdentificador" class="form-control" placeholder="Número de identificación" />
+                <span asp-validation-for="numIdentificador" class="text-danger"></span>
+            </div>
             <div class="form-group mt-3">
                 <input asp-for="FechaIngreso" class="form-control" placeholder="Fecha de Ingreso Colmena" />
                 <span asp-validation-for="FechaIngreso" class="text-danger"></span>
@@ -24,6 +28,11 @@
             <div class="form-group mt-3">
                 <input asp-for="Descripcion" class="form-control" placeholder="Descripcion" />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
+            </div>
+            <div class="form-group mt-3">
+                <select asp-for="UbicacionPredeterminada" asp-items="Model.UbicacionesPredeterminadas" class="form-control">
+                    <option value="" id="defaultUbicacionOption">Seleccione el lugar donde estarán las colmenas</option>
+                </select>
             </div>
             <div class="form-group mt-3">
                 <p>Usa el mapa interactivo para registrar la ubicación de la Colmena</p>
@@ -44,17 +53,34 @@
 </div>
 
 @section Scripts {
-    <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=AmrnF-1-dvaNYDUkUuogYW8SOvy2cut1Xdxs4EzsahlVv8HrT_MvGx0HPKP8dOlZ&callback=loadMapScenario' async defer></script>
+    <script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?key=AmrnF-1-dvaNYDUkUuogYW8SOvy2cut1Xdxs4EzsahlVv8HrT_MvGx0HPKP8dOlZ&callback=mapLoaded' async defer></script>
     <script src="/js/ubicacion.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             var tipoColmenaSelect = document.getElementById('tipoColmenaSelect');
+            var ubicacionSelect = document.getElementById('UbicacionPredeterminada'); // Agregar esto
+
             tipoColmenaSelect.addEventListener('focus', function () {
                 var defaultOption = document.getElementById('defaultOption');
                 if (defaultOption) {
                     tipoColmenaSelect.removeChild(defaultOption);
                 }
             });
+
+            ubicacionSelect.addEventListener('focus', function () { // Agregar esto
+                var defaultUbicacionOption = document.getElementById('defaultUbicacionOption');
+                if (defaultUbicacionOption) {
+                    ubicacionSelect.removeChild(defaultUbicacionOption);
+                }
+            });
+            ubicacionSelect.addEventListener('change', function (e) {
+                if (e.target.value) {
+                    var selectedLocation = JSON.parse(e.target.value);
+                    console.log("Ubicación seleccionada:", selectedLocation); // Para depuración
+                    updateMapToLocation(selectedLocation);
+                }
+            });
         });
+
     </script>
 }
