--- a/Beesiness/Views/Colmena/ColmenaEditar.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaEditar.cshtml
@@ -1,5 +1,4 @@
-﻿@model Colmena
-@{
+﻿@model ColmenaViewModel
 }
 
 <div>
@@ -14,11 +13,20 @@
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
+                <input asp-for="numIdentificador" class="form-control" placeholder=@Model.numIdentificador />
+                <span asp-validation-for="numIdentificador" class="text-danger"></span>
+            </div>
+            <div class="form-group mt-3">
                 <input asp-for="FechaIngreso" class="form-control" placeholder=@Model.FechaIngreso />
                 <span asp-validation-for="FechaIngreso" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
-                <input asp-for="TipoColmena" class="form-control" placeholder=@Model.TipoColmena />
+                <select asp-for="TipoColmena" class="form-control" id="tipoColmenaSelect">
+                    <option value="" id="defaultOption">Seleccione un tipo de colmena</option>
+                    <option value="Dadant">Dadant</option>
+                    <option value="Langstroth">Langstroth</option>
+                    <option value="Baby">Baby</option>
+                </select>
                 <span asp-validation-for="TipoColmena" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
@@ -26,9 +34,36 @@
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
+                <select asp-for="UbicacionPredeterminada" asp-items="Model.UbicacionesPredeterminadas" class="form-control">
+                    <option value="" id="defaultUbicacionOption">Seleccione el lugar donde estarán las colmenas</option>
+                </select>
+            </div>
+            <div class="form-group mt-3">
                 <input type="submit" value="Guardar los Cambios" class="btn btn-outline-success col-12" />
             </div>
         </div>        
     </form>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        var tipoColmenaSelect = document.getElementById('tipoColmenaSelect');
+        var ubicacionSelect = document.getElementById('UbicacionPredeterminadaId'); // Agregar esto
+
+        tipoColmenaSelect.addEventListener('focus', function () {
+            var defaultOption = document.getElementById('defaultOption');
+            if (defaultOption) {
+                tipoColmenaSelect.removeChild(defaultOption);
+            }
+        });
+
+        ubicacionSelect.addEventListener('focus', function () { // Agregar esto
+            var defaultUbicacionOption = document.getElementById('defaultUbicacionOption');
+            if (defaultUbicacionOption) {
+                ubicacionSelect.removeChild(defaultUbicacionOption);
+            }
+        });
+    });
+</script>
+}
 
