--- a/Beesiness/Views/Colmena/ColmenaResumen.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaResumen.cshtml
@@ -22,18 +22,30 @@
         </div>
     </div>
     <div class="col-sm-6">
-        <div class="card-header">
-            Grafico 3:
+        <div class="card">
+            <div class="card-header">
+                Grafico 3:
+            </div>
+            <div class="card-body">
+                <canvas id="canvas3" style="max-height:250px"></canvas>
+            </div>
         </div>
-        <div class="card-body">
-            <canvas id="canvas3" style="max-height:250px"></canvas>
-        </div>
+        
     </div>    
 </div>
 
 
 @section Scripts{
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="/js/graficos.js"></script>
+
+    <script>
+        const canvas3 = document.getElementById("canvas3");
+        let labels = ['hola', 'mundo'];
+        let data = [5,4];
+        let title = 'Hola Como estas';
+        GraficoBarras(canvas3, labels, data, title);
+    </script>
 
     <script>
         async function GraficoColmenasFecha()
@@ -64,53 +76,9 @@
 
             //ahora graficamos los datos
             const canvas2 = document.getElementById('canvas2');
-
-            new Chart(canvas2, {
-                type: 'bar',
-                data: {
-                    labels: years,
-                    datasets: [{
-                        label: 'Cantidad de colmenas',
-                        data: cantidad,
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            });            
+            GraficoBarras(canvas2, years, cantidad, 'Colmenas por año');
                        
-        }
-
-        async function GraficoBarras()
-        {
-            //grafico estandar solo para probar
-            const ctx = document.getElementById('canvas1');
-
-            new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-                    datasets: [{
-                        label: '# of Votes',
-                        data: [12, 19, 3, 5, 2, 3],
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            });
-
-        }
+        }       
         
         //definimos esta funcion por problemas con el arreglo.lenght
         function CalcularSize(arreglo)
