--- a/Beesiness/Views/Colmena/ColmenaIndex.cshtml
+++ b/Beesiness/Views/Colmena/ColmenaIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Colmena>
+﻿@model List<ColmenaViewModel>
 @{
     ViewData["Title"] = "Administrar Colmenas";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -26,6 +26,7 @@
                     <th>Fecha ingreso</th>
                     <th>Tipo Colmena</th>
                     <th>Descripcion</th>
+                    <th>ID Ubicación</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
