Revert "- Mapa actualizado."
This reverts commit 8c7b35e3d37eb0e44a4d1053f528f973aeb3ae6d.

--- a/Beesiness/Views/Usuarios/IndexUser.cshtml
+++ b/Beesiness/Views/Usuarios/IndexUser.cshtml
@@ -29,7 +29,7 @@
         <div class="card-body">
             <h5 class="card-title">Roles</h5>
             <p class="card-text">Apartado dedicado a los roles, donde puedes crear, editar y eliminar roles de los usuarios del sistema</p>
-            <a asp-controller="Rol" asp-action="RolGeneral" class="btn btn-primary">Ver roles</a>
+            <a asp-controller="Usuarios" asp-action="EditUser" class="btn btn-primary">Ver roles</a>
         </div>
     </div>
 </div>
